--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<h2>
 			Instructions
 		</h2>
-		Use the scrollbars to navigate. You can also do CTRL+F to easily find areas.<br>
+		Use the scrollbars to navigate.<br>
 		However, do not zoom in/out; it breaks this website. However, if you refresh after you zoom, then it works fine.
 		<button onclick="coords()">Go to Coords</button>
 		<button onclick="geo()">Geographical Map</button>
