--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		</h2>
 		Use the scrollbars to navigate.<br>
 		However, do not zoom in/out; it breaks this website. However, if you refresh after you zoom, then it works fine.
+		If you are interested in this, then check out <a href="https://discord.gg/crTTVjs">here.</a>
 		<button onclick="coords()">Go to Coords</button>
 		<button onclick="geo()">Geographical Map</button>
 		<button onclick="pol()">Political Map</button>
