--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 		</h2>
 		<p>6/19/2020: Map's framework created.</p>
 		<p>7/25/2020: Map has finally found a use.</p>
+		<p>Stranomegaium added as the first country.</p>
+		<p>Pagvarz added (originally as Praviagz) and went under many name changes.</p>
+		<p>Cities and towns have been added to various countries.</p>
 	</div>
 	<h1 id="mainheader">
 		Stranomegaium Cartography Service
