--- a/HDIIGameHTMLEdition/index.html
+++ b/HDIIGameHTMLEdition/index.html
@@ -36,7 +36,7 @@
 		<p>7/26/2020 - 7/27/2020: Basic features of game ported from the Scratch version. Currently, this is more of a tech demo than it is a game.</p>
 	</div>
 	<h1 id="mainheader">
-		How Deep Is It: The Game (ported from Scratch)
+		How Deep Is It: The Game (Derv Edition) (Inspired by Scratch version)
 	</h1>
 	<div id="map">
 		<div id="map2">
