--- a/HDIIGameHTMLEdition/index.html
+++ b/HDIIGameHTMLEdition/index.html
@@ -21,12 +21,12 @@
 		<h2>
 			Items
 		</h2>
-		<span id="pick">Bare Hands (1 damage, costed 0 coins)</span><br>
+		<span id="pick">Bare Hands (1 block damage, costed 0 coins)</span><br>
 		<h2>
 			Shop
 		</h2>
 		<span id="coins">You have 0 coins to spend.</span><br><br>
-		<span id="pickupgrades">Dirt Shovel (1.25 damage, costs 2.5 coins)</span><br>
+		<span id="pickupgrades">Dirt Shovel (1.25 block damage, costs 2.5 coins)</span><br>
 		<button onclick="upgrade('pick')">Buy now!</span>
 	</div>
 	<div id="right">
