--- a/letternations4/index.html
+++ b/letternations4/index.html
@@ -87,7 +87,10 @@
 		Military nations try to conquer the world (or portions of it). They are ruthless.
 	</div>
 	<div class="center">
-		Because of their relation with "dumbness", a form of a military power, they can be a fun nation to be in.
+		Because of their high relations with "dumbness", a form of a military power present everywhere,
+	</div>
+	<div class="center">
+		they can be a fun nation to be in.
 	</div>
 	<div class="center">
 		However, military nations are typically not very safe to be in; they can sometimes get massively destroyed.
