--- a/letternations4/index.html
+++ b/letternations4/index.html
@@ -114,7 +114,7 @@
 		First of all, newer nations typically preform lower on cenuses due to having less resources, being newer, etc.
 	</div>
 	<div class="center">
-		Second of all, if you end up inactive, then you'll be nuked to death, and everything you had will be gone.
+		Second of all, if you end up inactive, then you'll be nuked to death, or you will be deleted for inactivity.
 	</div>
 	<div class="center">
 		Third of all, you don't get as much of a "community effort".
