i haven't updated this in a while
okay

--- a/map/index.html
+++ b/map/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>
-		SGS
+		Map
 	</title>
 	<link rel="stylesheet" type="text/css" href="index.css">
 	</link>
@@ -42,7 +42,7 @@
 		<p>Cities and towns have been added to various countries.</p>
 	</div>
 	<h1 id="mainheader">
-		Stranomegaium Cartography Service
+		Stranalephium Cartography Service
 	</h1>
 	<div id="map" style="overflow: scroll;">
 		<img id="mapbg" src="mapv1.svg"></img>
