--- a/scarev/index.html
+++ b/scarev/index.html
@@ -15,7 +15,7 @@
 		</h2>
 		<p>7/31/2020: This thing exists now.</p>
 	</div>
-	<img src="logo.svg" width="400px" height="300px" class="center">(this icon sucks lol and this text is off-center)
+	<img src="logo.svg" width="400px" height="300px" class="center img2">
 	<img src="" width="400px" height="300px" class="right" id="img"><br>
 	<button onclick="audio.play()" class="center">
 		Enable Audio
@@ -28,6 +28,9 @@
 	</button><br>
 	<button onmouseenter='select("nation")' onclick="window.location.href='#nation'" class="center">
 		Creating a Nation
+	</button><br>
+	<button onmouseenter='select("war")' onclick="window.location.href='#war'" class="center">
+		Declaring War
 	</button><br>
 	<button onmouseenter='select("research")' onclick="window.location.href='#research'" class="center">
 		Do your research!
@@ -42,13 +45,13 @@
 		Revsca is a collab dervied from Letternations that is mainly Minecraft, unlike the previous three in the series.
 	</div>
 	<div class="center">
-		It is basically a mix of ScratchCiv and Letternations, with a few tweaks.
+		It is basically ScratchCiv  with a few tweaks.
 	</div>
 	<div class="center">
-		If you don't know what Letternations and Scratchciv are, then in simpler terms, Revsca is basically Minecraft nations
+		If you don't know what Scratchciv are, then in simpler terms, Revsca is basically Minecraft nations
 	</div>
 	<div class="center">
-		fighting with both dumbness and sheer power.
+		fighting with sheer power.
 	</div>
 	<div class="center">
 		However, there isn't just war; there is some moments of
@@ -105,7 +108,7 @@
 		Creating a Nation
 	</h1>
 	<div class="center">
-		If you are reading this, and want to create a nation, you are probably sick of citizenship..
+		If you are reading this, and want to create a nation, you are probably sick of citizenship.
 	</div>
 	<div class="center">
 		You want some independence, so you decide to create a nation. Before doing so however, consider some stuff.
@@ -130,6 +133,63 @@
 	</div>
 	<div class="center">
 		making a nation is a good way to enforce those laws you want enforced.
+	</div>
+	<div class="center">
+		In order to make a nation, you must make a document about it. You have to show your land claims,
+	</div>
+	<div class="center">
+		agree that you've been on the server for at least 2 full (active) days, 
+	</div>
+	<div class="center">
+		and that you have at least one other person willing to join your nation before it is created
+	</div>
+	<div class="center">
+		(citizens that are already citizens of another country do not count here).
+	</div>
+	<div class="center">
+		In addition to this, you must also provide the laws of your nation, and your government type.
+	</div>
+	<div class="center">
+		If you are making a nation, then you can claim land, but there are restrictions.
+	</div>
+	<div class="center">
+		You have to build some kind of building in the area you want to claim and have a document to claim it,
+	</div>
+	<div class="center">
+		approved by associated government officials, and if that claim doesn't develop enough within a week
+	</div>
+	<div class="center">
+		, then it gets unclaimed. This way, people can't just "hog land" unreasonably.
+	</div>
+	<h1 id="war">
+		Declaring War
+	</h1>
+	<div class="center">
+		Either a nation did a thing you really hate, or you just want to eat nations as if they where breakfast.
+	</div>
+	<div class="center">
+		If so, then you might want to declare war. However, war isn't exactly easy.
+	</div>
+	<div class="center">
+		In order to declare war, you need to write a document about your war, and have the other nation be aware.
+	</div>
+	<div class="center">
+		You also can only attack a nation if at least one member of the nation is online
+	</div>
+	<div class="center">
+		(unless the nation is marked "Inactive").
+	</div>
+	<div class="center">
+		You also CANNOT bed-camp; do not get too close to a person's bed in war.
+	</div>
+	<div class="center">
+		There are also limits; you can only throw a maximum of 4 TNT and change/place/break
+	</div>
+	<div class="center">
+		a combined total of 48 blocks (including TNT blocks). 
+	</div>
+	<div class="center">
+		You also need to build an obvious government area with a government building and your flag proudly displayed.
 	</div>
 	<h1 id="research">
 		Do your research!
