--- a/scarev/index.html
+++ b/scarev/index.html
@@ -42,13 +42,13 @@
 		What is this?
 	</h1>
 	<div class="center">
-		Revsca is a collab dervied from Letternations that is mainly Minecraft, unlike the previous three in the series.
+		Revsca is a collab dervied from ScratchCiv that is mainly Minecraft, unlike the previous three in the series.
 	</div>
 	<div class="center">
 		It is basically ScratchCiv  with a few tweaks.
 	</div>
 	<div class="center">
-		If you don't know what Scratchciv are, then in simpler terms, Revsca is basically Minecraft nations
+		If you don't know what Scratchciv is, then in simpler terms, Revsca is basically Minecraft nations
 	</div>
 	<div class="center">
 		fighting with sheer power.
