--- a/map/index.html
+++ b/map/index.html
@@ -40,6 +40,7 @@
 		<p>Stranomegaium added as the first country.</p>
 		<p>Pagvarz added (originally as Praviagz) and went under many name changes.</p>
 		<p>Cities and towns have been added to various countries.</p>
+		<p>8/13/2020: Server restarted completely; old countries were removed, and the map was reset.</p>
 	</div>
 	<h1 id="mainheader">
 		Stranalephium Cartography Service
